--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dummy">
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
    <application
         android:label="dummy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <activity android:name="io.github.edufolly.fluttermobilevision.barcode.BarcodeCaptureActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
