--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  #..................................Add ThirdParty plugins here....................................
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  shimmer: ^2.0.0
+  flutter_mobile_vision: ^0.1.3
 
 dev_dependencies:
   flutter_test:
