--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.4
   shimmer: ^2.0.0
   flutter_mobile_vision: ^0.1.3
+  fragment_navigate: ^1.2.0+2
 
 dev_dependencies:
   flutter_test:
