--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_mobile_vision: ^0.1.3
   fragment_navigate: ^1.2.0+2
+  card_swiper: ^2.0.3
 
 dev_dependencies:
   flutter_test:
