--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_mobile_vision: ^0.1.3
   fragment_navigate: ^1.2.0+2
   card_swiper: ^2.0.3
+  lottie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/splash_screen.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
