--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/splash_screen.json
+    - assets/bg_turbines.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
