--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
   assets:
     - assets/splash_screen.json
     - assets/bg_turbines.json
-  #   - images/a_dot_burr.jpeg
+    - images/profile.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
